Kubernetes-prod/Backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: competex-backend-deployment
  namespace: competex-backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: competex-backend
  template:
    metadata:
      labels:
        app: competex-backend
    spec:
      tolerations: # Ensure pods are scheduled on appropriate nodes (Control where Pods can run.)
      - key: "competex-backend"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      containers:
      - name: competex-backend
        image: ilum1/competex:master_backend # your-repository/competex-backend:latest  # Replace with your container registry URL
        imagePullPolicy: Always  # Use "Always" to ensure the image is pulled from the registry # Alternative: use never if local
        ports:
        - containerPort: 8080
        - containerPort: 8081
