Kubernetes-prod/Backend/competex-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: competex-backend-ingress
  namespace: competex-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: backend.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: competex-backend-service
            port:
              number: 8080
